infra/apps-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-detection
  namespace: dfip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-detection
  template:
    metadata:
      labels:
        app: face-detection
    spec:
      containers:
      - name: face-detection
        image: image-registry.openshift-image-registry.svc:5000/dfip/face-detection:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: face-detection
  namespace: dfip
spec:
  selector:
    app: face-detection
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: face-detection
  namespace: dfip
spec:
  to:
    kind: Service
    name: face-detection
  port:
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camera-uploader
  namespace: dfip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camera-uploader
  template:
    metadata:
      labels:
        app: camera-uploader
    spec:
      containers:
      - name: camera-uploader
        image: image-registry.openshift-image-registry.svc:5000/dfip/camera-uploader:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-processor
  namespace: dfip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-processor
  template:
    metadata:
      labels:
        app: event-processor
    spec:
      containers:
      - name: event-processor
        image: image-registry.openshift-image-registry.svc:5000/dfip/event-processor:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-embedding
  namespace: dfip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-embedding
  template:
    metadata:
      labels:
        app: face-embedding
    spec:
      containers:
      - name: face-embedding
        image: image-registry.openshift-image-registry.svc:5000/dfip/face-embedding:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: updating-vector-identities
  namespace: dfip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: updating-vector-identities
  template:
    metadata:
      labels:
        app: updating-vector-identities
    spec:
      containers:
      - name: updating-vector-identities
        image: image-registry.openshift-image-registry.svc:5000/dfip/updating-vector-identities:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-search
  namespace: dfip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector-search
  template:
    metadata:
      labels:
        app: vector-search
    spec:
      containers:
      - name: vector-search
        image: image-registry.openshift-image-registry.svc:5000/dfip/vector-search:latest
